# dotfiles

./: .chezmoiignore  README.md  dconf_overrides.keyfile.tmpl  dot_gdbinit  dot_gitconfig  dot_gitignore_global  dot_spacemacs  dot_tmux.conf  private_dot_authinfo.gpg
.keyfiles/: org.gnome.Evolution  org.gnome.Ptyxis.tmpl
WebKit/: dot_clangd  dot_envrc  dot_envrc.tmpl  features.toml  lsan-suppressions.txt  webkit-clangd.toml.tmpl
WebKit/dot_git/hooks/: executable_prepare-commit-msg
WebKit/dot_git/info/: exclude
dev/atuin/: dot_envrc
dev/rust/librice/: executable_cargo_wrapper.py  meson.build
dot_config/: starship.toml  topgrade.toml
dot_config/atuin/: config.toml
dot_config/autostart/: symlink_app.devsuite.Ptyxis.desktop  symlink_org.gnome.Ptyxis.Devel.desktop  symlink_org.gnome.Ptyxis.desktop
dot_config/private_fish/: config.fish  fish_variables
dot_config/private_fish/conf.d/: vars.fish
dot_config/private_pipewire/pipewire.conf.d/: noraop.conf
dot_config/zellij/: config.kdl
dot_local/: Brewfile
dot_local/share/atuin/: key.tmpl
dot_local/share/private_applications/: executable_org.gnu.emacs.desktop
dot_local/share/private_flatpak/overrides/: org.gnome.Epiphany.Devel  org.gnu.emacs
dot_spacemacs.d/: init.el
dot_spacemacs.d/layers/chezmoi/: packages.el
dot_var/app/app.devsuite.Ptyxis/config/private_glib-2.0/private_settings/: private_keyfile
dot_var/app/org.gnome.Prompt.Devel/config/private_glib-2.0/private_settings/: private_keyfile
dot_var/app/org.gnome.Ptyxis.Devel/config/private_glib-2.0/private_settings/: private_keyfile
toolbox/: executable_indent  executable_indent.tmpl  executable_toolbox-exec  executable_toolbox-exec.tmpl  executable_toolbox-run  symlink_cmake
